testdata/baselines/reference/submodule/compiler/requireOfJsonFileInJsFile.errors.txt
/user.js(2,7): error TS2339: Property 'b' does not exist on type '{ a: number; }'.
/user.js(5,15): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
/user.js(8,21): error TS2307: Cannot find module './js.js' or its corresponding type declarations.
/user.js(9,7): error TS2339: Property 'b' does not exist on type '{ a: number; }'.
/user.js(12,13): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== /user.js (5 errors) ====
    const json0 = require("./json.json");
    json0.b; // Error (good)
          ~
!!! error TS2339: Property 'b' does not exist on type '{ a: number; }'.
    
    /** @type {{ b: number }} */
    const json1 = require("./json.json"); // No error (bad)
                  ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    json1.b; // No error (OK since that's the type annotation)
    
    const js0 = require("./js.js");
                        ~~~~~~~~~
!!! error TS2307: Cannot find module './js.js' or its corresponding type declarations.
    json0.b; // Error (good)
          ~
!!! error TS2339: Property 'b' does not exist on type '{ a: number; }'.
    
    /** @type {{ b: number }} */
    const js1 = require("./js.js"); // Error (good)
                ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    js1.b;
==== /json.json (0 errors) ====
    { "a": 0 }
    
==== /js.js (0 errors) ====
    module.exports = { a: 0 };
    